Added ModCreativeModeTab and spell tab

--- a/src/main/resources/assets/spellcards/lang/en_us.json
+++ b/src/main/resources/assets/spellcards/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.spellcards.fireball": "Fireball",
-  "item.spellcards.frostbolt": "Frostbolt"
+  "item.spellcards.frostbolt": "Frostbolt",
+
+  "itemGroup.spelltab": "Spell Tab"
 }
