--- a/src/main/resources/assets/spellcards/lang/en_us.json
+++ b/src/main/resources/assets/spellcards/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.spellcards.fireball": "Fireball",
   "item.spellcards.frostbolt": "Frostbolt",
 
-  "itemGroup.spelltab": "Spell Tab"
+  "itemGroup.spelltab": "Spell Tab",
+
 }
