--- a/src/main/resources/assets/spellcards/lang/en_us.json
+++ b/src/main/resources/assets/spellcards/lang/en_us.json
@@ -2,11 +2,16 @@
   //items
   "item.spellcards.manacrystal": "Mana Crystal",
 
+  //blocks
+  "block.spellcards.mana_crystal_block": "Block of Mana Crystal",
+  "block.spellcards.mana_crystal_ore": "Mana Crystal Ore",
+  "block.spellcards.deepslate_mana_crystal_ore": "Deepslate Mana Crystal Ore",
+
   //spells
   "item.spellcards.fireball": "Fireball",
   "item.spellcards.frostbolt": "Frostbolt",
 
   //creative tab
-  "itemGroup.spelltab": "Spell Tab"
-
+  "itemGroup.spelltab": "Spell Tab",
+  "itemGroup.crystaltab": "Crystal Tab"
 }
