Fixed manacrystal -> mana_crystal

--- a/src/main/resources/assets/spellcards/lang/en_us.json
+++ b/src/main/resources/assets/spellcards/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   //items
-  "item.spellcards.manacrystal": "Mana Crystal",
+  "item.spellcards.mana_crystal": "Mana Crystal",
 
   //blocks
   "block.spellcards.mana_crystal_block": "Block of Mana Crystal",
